- Updated for 1.20 compatibility

- Bleed particles now reduced when crouching
- Increase quantity of bleed particles
